<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="49dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/myNanoDegree"
        android:textColor="#391F0E"
        android:textSize="22sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/spotifyStreamer"
        android:onClick="spotifyStreamerClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/scoresApp"
        android:onClick="scoresAppClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/libraryApp"
        android:onClick="libraryAppClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/buildItBigger"
        android:onClick="buildItBiggerClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/xyzReader"
        android:onClick="xyzReaderClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#D00003"
        android:text="@string/capstone"
        android:textColor="#FFFFFF"
        android:onClick="capstoneClick"/>

</LinearLayout>
